5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1593_588.log
== TEST (2019-03-25 17:08:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor= int(input("Qual o valor do saque? "))
qtd100=valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
notas_R50=qtd100
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(int(notas_R100))
NameError: name 'notas_R100' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:08:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor= int(input("Qual o valor do saque? "))
qtd100=valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
notas_R50=qtd100
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(int(notas_R100))
NameError: name 'notas_R100' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:08:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor= int(input("Qual o valor do saque? "))
qtd100=valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
notas_R100=qtd100
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:09:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor= int(input("Qual o valor do saque? "))
qtd100=valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
notas_R100=qtd100
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- EXECUTION TIME:
0.137228
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:32:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor= int(input("Qual o valor do saque? "))
qtd100=valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
notas_R100=qtd100
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- EXECUTION TIME:
0.158369
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
